Fixed sleep baseline not showing up

--- a/src/views/checkins/CheckInsView.module.css
+++ b/src/views/checkins/CheckInsView.module.css
@@ -1,5 +1,6 @@
 .navArrow {
   cursor: pointer;
+  text-align: center;
 }
 
 .navArrow :hover {
